--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx1536m
 
 kotlin_version=1.2.51
-kotlin_native_version=0.8-dev-2701
+kotlin_native_version=0.9-dev-2831
 
-coroutines_version=0.23.5.native
+coroutines_version=0.23.42
 
-ktor_version = 0.9.6.28
+ktor_version = 0.9.6.29
 
 android_buildtools_version=3.1.3
